--- a/AdventOfCode2022/AdventOfCode2022.csproj
+++ b/AdventOfCode2022/AdventOfCode2022.csproj
@@ -41,6 +41,9 @@
       <None Update="Data\day_11.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Data\day_11-test.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
